# trace-agent

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EVOLUTION.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
examples/: basic_tracing.py  decorator_usage.py  file_storage_dashboard.py
src/traceagent/: __init__.py  async_storage.py  dashboard.py  decorators.py  mcp_server.py  models.py  storage.py  tracer.py
tests/: conftest.py  test_dashboard.py  test_decorators.py  test_error_hardening.py  test_mcp_server.py  test_models.py  test_performance.py  test_properties.py  test_storage.py  test_tracer.py
