[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traceagent"
version = "0.1.0"
description = "Lightweight observability SDK — traces, spans, decorators, MCP server, and dashboard"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anyio>=4.0",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.hatch.build.targets.wheel]
packages = ["src/traceagent"]
